# ESP32-S3-Touch-LCD-2.8-ESP-IDF-v5.X

./: CMakeLists.txt  README.md  code.code-workspace  sdkconfig  sdkconfig.old
components/lvgl/: Kconfig
configs/board_config/: CMakeLists.txt  board_config.c  board_config.h
configs/board_pins/: CMakeLists.txt  board_pins.h
configs/lvgl_framework_config/: lvgl_framework_config.h
configs/lvgl_port_configuration/: CMakeLists.txt  lvgl_port_configuration.h
demo/Arduino/examples/LVGL_Arduino/: LVGL_Example.cpp
demo/ESP-IDF/ESP32-S3-Touch-LCD-2.8-Test/: CMakeLists.txt  sdkconfig.defaults  sdkconfig.defaults.waveshare
demo/ESP-IDF/ESP32-S3-Touch-LCD-2.8-Test/main/: CMakeLists.txt  CONFIG.h  Vernon_ST7789T.c  board_config.c  board_config.h  board_pins.h  esp_lcd_touch.c  lcd_backlight.c  lcd_backlight.h  lcd_driver.c  lcd_driver.h  lcd_touch_driver.c  lcd_touch_driver.h  lvgl_port.c  main.cpp  touch_port.c  touch_port.h
drivers/cst328_driver/: CMakeLists.txt  touch_cst328_driver.c  touch_cst328_driver.h
drivers/lcd_backlight_driver_interface/: CMakeLists.txt  lcd_backlight.c  lcd_backlight.h
drivers/vernon_st7789t_driver/: CMakeLists.txt  vernon_st7789t_driver.c  vernon_st7789t_driver.h
extras/drivers/LVGL_Driver/: LVGL_Driver.h
extras/fonts-for-vscode-workspace/: code.code-workspace
extras/ports/lcd_port/: lcd_port.c  lcd_port.h
extras/ports/lvgl_port/: lvgl_port.c
extras/ports/touch_port/: touch_port.c  touch_port.h
frameworks/bsp_lvgl_framework/: CMakeLists.txt  bsp_lvgl_framework.c  bsp_lvgl_freertos_utils.c  bsp_lvgl_indev.c  bsp_lvgl_mutex_utils.c  bsp_lvgl_rotation.c  lvgl_framework_internals.h
frameworks/bsp_lvgl_framework/include/: lvgl_framework.h
interfaces/bsp_i2c_interface/: CMakeLists.txt  i2c_bsp_interface.c  i2c_bsp_interface.h
interfaces/bsp_lcd_interface/: CMakeLists.txt  lcd_bsp_interface.c  lcd_bsp_interface.h
interfaces/bsp_spi_interface/: spi_bsp_interface.c  spi_bsp_interface.h
interfaces/bsp_touch_interface/: CMakeLists.txt  touch_bsp_interface.c  touch_bsp_interface.h
main/: CMakeLists.txt  main.cpp  ui.h
modules/filesystem/include/: defines.h
modules/filesystem/src/: eMMC_fs.c  filesystem.c
modules/littlefs/src/: littlefs_api.h
